# rust-raytracer

./: .gitattributes  .gitignore  BENCHMARKS.md  Cargo.toml  aabb.rs  args.rs  brdf.rs  bvh.rs  camera.rs  frustum.rs  integrators.rs  light.rs  main.rs  ray.rs  scene.rs  trace_stats.rs  triangle.rs  triangle_opt.rs
.cargo/: config.toml
benches/: criterion.rs
bvh/: intersect_stream.rs
integrators/: common.rs  integrate_stream.rs
scenes/: README.md
scenes/CornellBox/: CornellBox-Empty-CO.mtl  CornellBox-Empty-RG.mtl  CornellBox-Empty-Squashed.mtl  CornellBox-Empty-White.mtl  CornellBox-Glossy-Floor.mtl  CornellBox-Glossy.mtl  CornellBox-Mirror.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl  copyright.txt  water.mtl
scenes/San_Miguel/: license.txt  san-miguel-low-poly.mtl  san-miguel.mtl
scenes/asian_dragon_obj/: LICENSE.txt  asian_dragon.ecs  asian_dragon.mtl
src/: aabb.rs  args.rs  brdf.rs  bvh.rs  camera.rs  integrators.rs  light.rs  main.rs  math.rs  mesh.rs  ray.rs  scene.rs  trace_stats.rs  triangle_intersector.rs  triangle_opt.rs  utils.rs
src/bvh/: build.rs  intersect1.rs  intersect1_simple.rs  intersect4.rs  intersect_stream.rs  intersector4.rs  intersector4x2.rs  intersector_n.rs  node_intersector.rs  node_intersector4.rs  node_intersector4x2.rs  node_intersector8.rs  simd_ray.rs
src/integrators/: common.rs  integrate1.rs  integrate4.rs  integrate_stream.rs  tile_integrator.rs  tile_integrator_n.rs
