[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rayon = "1.5"
ultraviolet = "0.8"
wide = "0.6"
rand = "0.8"
obj = "0.10"

[[bin]]
name = "rust"
path = "main.rs"

[profile.release]
debug = 1
codegen-units = 1
lto = true