[package]
name = "rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
rayon = "1.5"
ultraviolet = "0.10"
wide = "0.7"
rand = "0.10"
obj = "0.10"
arrayvec = "0.7"
safe_arch = "1.0"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[[bin]]
name = "rust"
path = "main.rs"

[profile.release]
debug = 1
codegen-units = 1
lto = true
