[package]
name = "rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
rayon = "1.5"
wide = "0.7"
rand = { version= "0.8", features = ["small_rng"] }
obj = "0.10"
arrayvec = "0.7"
safe_arch = "1.0"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
nalgebra = "0.34.1"
simba = { version = "0.9.1", features = ["rand", "wide"] }
hybrid-array = "0.4.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[[bin]]
name = "rust"
path = "src/main.rs"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 1
